src/newSite/skills.css
@media (min-width: 43.75em) { /* 700px / 16 */
  /* 2-skill medium layout */
  section.skill-x2 {
    grid-template-columns: 50% 50%;
    grid-template-rows: auto auto;
    grid-template-areas:
      "title title"
      "sub1 sub2";
  }

  /* 3-skill medium layout */
  section.skill-x3 {
    grid-template-columns: 33.33% 33.3% 33.33%;
    grid-template-rows: auto auto;
    grid-template-areas:
      "title title title"
      "sub1 sub2 sub3";
  }

  section.skill {
    align-items: start;
  }
}

@media (min-width: 62.5em) { /* 1000px / 16 */
  /* 2-skill large layout */
  section.skill-x2 {
    grid-template-columns: 30rem 50fr 50fr;
    grid-template-rows: auto;
    grid-template-areas: "title sub1 sub2";
  }
  /* 3-skill large layout */
  section.skill-x3 {
    grid-template-columns: 30rem 33fr 33fr 33fr;
    grid-template-rows: auto;
    grid-template-areas: "title sub1 sub2 sub3";
  }

  section.skill h2 {
    align-self: center;
  }
}

section.skill h2 {
  grid-area: title;
}

section.skill h3 {
  margin: 1rem 1.5rem 1rem;
  font-size: 2.2rem;
  font-weight: normal;
}

section.skill p {
  margin: 1rem 0;
  padding: 0 1.5rem;
}

